--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,13 +11,13 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build and push image
-      uses: ./.github/actions/build-and-push-image
+      uses: ./.github/actions/build-and-push-images
       id: build
       with:
         context: .
         image-tag: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         registry-username: ${{ github.actor }}
-        registry-password: ${{ secrets.GH_TOKEN_ORG }}
+        registry-password: ${{ secrets.GH_TOKEN }}
   test:
     runs-on: ubuntu-latest
     needs: build
