--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
       uses: ./.github/actions/build-and-push-images
       id: build
       with:
+        registry: ${{ env.REGISTRY }}
         context: .
         image-tag: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         registry-username: ${{ github.actor }}
