--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,10 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 jobs:
   build:
+    name: Build API image
     runs-on: ubuntu-latest
+    outputs:
+      image_tag: ${{ steps.build.outputs.image_tags }}
     steps:
     - uses: actions/checkout@v4
     - name: Display ls
@@ -23,6 +26,7 @@ jobs:
         registry-username: ${{ github.actor }}
         registry-password: ${{ secrets.GH_TOKEN }}
   test:
+    name: Test API image
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -32,5 +36,5 @@ jobs:
     - name: Test
       run: |
         docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GH_TOKEN }}
-        docker run --rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} -v .:/app pytest main.py
+        docker run --rm ${{ needs.build.outputs.image_tag }} -v .:/app pytest main.py
 
