--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
       uses: docker/setup-qemu-action@v3
     - name: Test
       run: |
-        docker login ghcr.io -u ${{ github.actor }} --password-stdin ${{ secrets.GH_TOKEN }}
+        echo "${{ secrets.GH_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
         docker run --rm -v .:/app ${{ needs.build.outputs.image_tag }} ls
         docker run --rm -v .:/app ${{ needs.build.outputs.image_tag }} pytest main.py
 
