--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,6 @@ jobs:
     - name: Test
       run: |
         echo "${{ secrets.GH_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-        docker run --rm -v .:/app ${{ needs.build.outputs.image_tag }} ls
+        docker run --rm -v ./app:/app ${{ needs.build.outputs.image_tag }} ls
         docker run --rm -v .:/app ${{ needs.build.outputs.image_tag }} pytest main.py
 
